[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bonedaddy/rust-template"
rust-version = "1.86"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1