[package]
name = "pyth-hermes-rs"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.reqwest-eventsource]
version = "0.6"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.tokio]
version = "1"
features = ["full", "parking_lot"]

[dependencies.log]
version = "0.4"

[dependencies.futures-util]
version = "0.3"