[package]
name = "pyth-hermes-rs"
version = "0.0.7"
description = "HTTP client for the Pyth Hermes API"
keywords = ["solana", "pyth", "http"]
readme = "../../README.md"
documentation = "https://docs.rs/pyth-hermes-rs/latest/pyth_hermes_rs/"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.reqwest-eventsource]
version = "0.6"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.tokio]
version = "1"
features = ["full", "parking_lot"]

[dependencies.log]
version = "0.4"

[dependencies.futures-util]
version = "0.3"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1